# edlib-rs-cli

./: .gitmodules  Cargo.toml  README.md  build.rs  test.fasta
examples/: edaligner.rs
src/: edlib_sys.rs  lib.rs  main.rs
