[package]
name = "edlib_rs"
version = "0.1.2"
authors = ["jeanpierre.both@gmail.com", "ragnar.grootkoerkamp@gmail.com"]
edition = "2018"
build = "build.rs"
license = "MIT/Apache-2.0"
keywords = ["ffi", "bindings", "edlib"]
repository = "https://github.com/pairwise-alignment/edlib-rs"
description = "A rust interface to the C++ edlib library"
#documentation = "https://docs.rs/edlib_rs"

[build-dependencies]
bindgen = "0.63.0"
cmake = "0.1"

[dev-dependencies]
clap = "3.0"
cpu-time = "1.0"
needletail = "0.4.1"
